--- a/src/globals/style.css
+++ b/src/globals/style.css
@@ -1,6 +1,10 @@
 html,
 body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    width: 100%;
     height: 100%;
-    background: rgb(113,119,68);
-    background: linear-gradient(45deg, rgba(113,119,68,1) 0%, rgba(188,189,139,1) 77%);
+    background: rgb(113, 119, 68);
+    background: linear-gradient(45deg, rgba(113, 119, 68, 1) 0%, rgba(188, 189, 139, 1) 77%);
 }
